<resources>
    <string name="app_name">Kotlin_FileIO</string>
    <string name="WriteInternal">Write Internal</string>
    <string name="ReadInternal">Read Internal</string>
    <string name="DeleteInternal">Delete Internal</string>
    <string name="WriteExternal">Write External</string>
    <string name="ReadExternal">Read External</string>
    <string name="DeleteExternal">Delete External</string>
</resources>
