<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.karan.kotlin_fileio.MainActivity">

    <Button
        android:id="@+id/writeInternalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="writeInternalOnClick"
        android:text="@string/WriteInternal"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextWrite"
        android:layout_marginStart="16dp"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/ReadInternalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="readInternalOnClick"
        android:text="@string/ReadInternal"
        android:textSize="8sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextWrite"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toEndOf="@+id/writeInternalButton"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/WriteExternalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="writeExternalOnClick"
        android:text="@string/WriteExternal"
        android:textSize="8sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/writeInternalButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextRead"
        android:layout_marginStart="16dp"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/ReadExternalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="readExternalOnClick"
        android:text="@string/ReadExternal"
        android:textSize="8sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ReadInternalButton"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextRead"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/WriteExternalButton"
        android:layout_marginStart="29dp"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/DeleteInternalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="deleteInternalOnClick"
        android:text="@string/DeleteInternal"
        android:textSize="8sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextWrite"
        app:layout_constraintStart_toEndOf="@+id/ReadInternalButton"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/DeleteExternalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="deleteExternalOnClick"
        android:text="@string/DeleteExternal"
        android:textSize="8sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/DeleteInternalButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextRead"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ReadExternalButton"
        android:layout_marginStart="8dp"
        tools:ignore="SmallSp" />

    <EditText
        android:id="@+id/editTextWrite"
        android:layout_width="0dp"
        android:layout_height="141dp"
        android:ems="10"
        android:gravity="start"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextRead"
        android:layout_width="0dp"
        android:layout_height="210dp"
        android:ems="10"
        android:gravity="start"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="284dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="17dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="14dp"
        tools:ignore="LabelFor" />

</android.support.constraint.ConstraintLayout>
